[gd_scene load_steps=14 format=3 uid="uid://bpj5tre788qmj"]

[ext_resource type="Texture2D" uid="uid://cjnq6weag7k4b" path="res://icon.svg" id="1_rg7aq"]
[ext_resource type="Texture2D" uid="uid://jk3p542fxua0" path="res://assets/Art/Monay.png" id="2_2yy7w"]
[ext_resource type="Script" uid="uid://bw4tpa2qag4rh" path="res://scenes/Menu/Scripts/game_over_screen.gd" id="2_2633b"]
[ext_resource type="Texture2D" uid="uid://b6mdylmhtgtlm" path="res://assets/Art/snow_particle.png" id="4_d2ee5"]
[ext_resource type="Texture2D" uid="uid://bljgjjugewmow" path="res://assets/Art/fireball.png" id="4_fdcw2"]
[ext_resource type="Texture2D" uid="uid://b7e8hw7t3et5b" path="res://assets/Art/Ice_cream.png" id="4_ipb26"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4wgni"]
atlas = ExtResource("4_fdcw2")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyb5a"]
atlas = ExtResource("4_fdcw2")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1qvj"]
atlas = ExtResource("4_fdcw2")
region = Rect2(96, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_apx8n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wgni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyb5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1qvj")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="GDScript" id="GDScript_fdcw2"]
script/source = "extends AnimatedSprite2D

func _ready() -> void:
	play(\"default\")
"

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ipb26"]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_d2ee5"]
offsets = PackedFloat32Array(0, 0.608696, 0.858696, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.942763, 1, 1, 1, 0.717391, 1, 1, 1, 0)

[node name="NinePatchRect" type="NinePatchRect"]
process_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_top = 76.0
offset_right = 107.0
offset_bottom = 110.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17
script = ExtResource("2_2633b")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_right = -67.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -118.0
offset_top = 62.0
offset_right = 88.0
offset_bottom = 96.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="RichTextLabel" type="RichTextLabel" parent="Control/NinePatchRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -12.0
offset_right = 191.0
offset_bottom = 12.0
grow_vertical = 2
text = "MONEY MADE"
scroll_active = false

[node name="NinePatchRect2" type="NinePatchRect" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 112.0
offset_top = 62.0
offset_right = 264.0
offset_bottom = 96.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="Sprite2D" type="Sprite2D" parent="Control/NinePatchRect2"]
position = Vector2(27, 17)
scale = Vector2(1.5625, 1.5625)
texture = ExtResource("2_2yy7w")

[node name="MoneyMadeText" type="RichTextLabel" parent="Control/NinePatchRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.544
anchor_bottom = 0.544
offset_left = 47.0
offset_top = -13.496
offset_right = 152.0
offset_bottom = 13.504
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 0, 1)
text = "0000"
scroll_active = false

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_top = 53.0
offset_right = -67.0
offset_bottom = 93.0
grow_horizontal = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -118.0
offset_top = 62.0
offset_right = 88.0
offset_bottom = 96.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="RichTextLabel" type="RichTextLabel" parent="Control2/NinePatchRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = -12.0
offset_right = 189.0
offset_bottom = 12.0
grow_vertical = 2
text = "MONEY SPENT"
scroll_active = false

[node name="NinePatchRect2" type="NinePatchRect" parent="Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 112.0
offset_top = 62.0
offset_right = 264.0
offset_bottom = 96.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="Sprite2D" type="Sprite2D" parent="Control2/NinePatchRect2"]
position = Vector2(27, 17)
scale = Vector2(1.5625, 1.5625)
texture = ExtResource("2_2yy7w")

[node name="MoneySpentText" type="RichTextLabel" parent="Control2/NinePatchRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 47.0
offset_top = -12.0
offset_right = 152.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 0, 1)
text = "0000"
scroll_active = false

[node name="Control5" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_top = 103.0
offset_right = -67.0
offset_bottom = 143.0
grow_horizontal = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control5"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -118.0
offset_top = 62.0
offset_right = 105.0
offset_bottom = 96.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="RichTextLabel" type="RichTextLabel" parent="Control5/NinePatchRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = -12.0
offset_right = 216.0
offset_bottom = 12.0
grow_vertical = 2
text = "DMG TAKEN"
scroll_active = false

[node name="NinePatchRect2" type="NinePatchRect" parent="Control5"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 128.0
offset_top = 62.0
offset_right = 264.0
offset_bottom = 96.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="DMGTakenText" type="RichTextLabel" parent="Control5/NinePatchRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -12.0
offset_right = 137.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/default_color = Color(1, 0.413249, 0.545773, 1)
text = "0000"
scroll_active = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control5/NinePatchRect2"]
position = Vector2(116, 12)
rotation = 4.49232
sprite_frames = SubResource("SpriteFrames_apx8n")
frame_progress = 0.609959
script = SubResource("GDScript_fdcw2")

[node name="Control6" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_top = 149.0
offset_right = -67.0
offset_bottom = 189.0
grow_horizontal = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control6"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -118.0
offset_top = 62.0
offset_right = 105.0
offset_bottom = 96.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="RichTextLabel" type="RichTextLabel" parent="Control6/NinePatchRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = -12.0
offset_right = 216.0
offset_bottom = 12.0
grow_vertical = 2
text = "DROPPED :C"
scroll_active = false

[node name="NinePatchRect2" type="NinePatchRect" parent="Control6"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 128.0
offset_top = 62.0
offset_right = 264.0
offset_bottom = 96.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="IcecreamDroppedText" type="RichTextLabel" parent="Control6/NinePatchRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 26.0
offset_top = -12.0
offset_right = 131.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/default_color = Color(0.913725, 0.682353, 0.337255, 1)
text = "0000"
scroll_active = false

[node name="Sprite2D" type="Sprite2D" parent="Control6/NinePatchRect2"]
position = Vector2(114, 13)
texture = ExtResource("4_ipb26")
region_enabled = true
region_rect = Rect2(142, 18, 34, 28)

[node name="Control3" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_top = 198.0
offset_right = -67.0
offset_bottom = 238.0
grow_horizontal = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -118.0
offset_top = 62.0
offset_right = 88.0
offset_bottom = 96.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="RichTextLabel" type="RichTextLabel" parent="Control3/NinePatchRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 14.0
offset_top = -12.0
offset_right = 186.0
offset_bottom = 12.0
grow_vertical = 2
text = "PROFIT!!!"
scroll_active = false

[node name="NinePatchRect2" type="NinePatchRect" parent="Control3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 112.0
offset_top = 62.0
offset_right = 264.0
offset_bottom = 96.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="Sprite2D" type="Sprite2D" parent="Control3/NinePatchRect2"]
position = Vector2(27, 17)
scale = Vector2(1.5625, 1.5625)
texture = ExtResource("2_2yy7w")

[node name="ProfitText" type="RichTextLabel" parent="Control3/NinePatchRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 47.0
offset_top = -12.0
offset_right = 152.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 0, 1)
text = "0000"
scroll_active = false

[node name="Control4" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_top = 247.0
offset_right = -67.0
offset_bottom = 287.0
grow_horizontal = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control4"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -118.0
offset_top = 62.0
offset_right = 88.0
offset_bottom = 96.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="RichTextLabel" type="RichTextLabel" parent="Control4/NinePatchRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 14.0
offset_top = -12.0
offset_right = 186.0
offset_bottom = 12.0
grow_vertical = 2
text = "HIGHSCORE"
scroll_active = false

[node name="NinePatchRect2" type="NinePatchRect" parent="Control4"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 112.0
offset_top = 62.0
offset_right = 264.0
offset_bottom = 96.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="Sprite2D" type="Sprite2D" parent="Control4/NinePatchRect2"]
position = Vector2(27, 17)
scale = Vector2(1.5625, 1.5625)
texture = ExtResource("2_2yy7w")

[node name="HighScoreText" type="RichTextLabel" parent="Control4/NinePatchRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 47.0
offset_top = -12.0
offset_right = 152.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 0, 1)
text = "0000"
scroll_active = false

[node name="NewHighScoreBox" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -154.0
offset_top = 357.0
offset_right = 148.0
offset_bottom = 391.0
grow_horizontal = 2
texture = ExtResource("1_rg7aq")
draw_center = false
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="RichTextLabel" type="RichTextLabel" parent="NewHighScoreBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -12.0
offset_right = 144.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 0, 1)
text = "NEW HIGHSCORE !!!"
scroll_active = false
horizontal_alignment = 1

[node name="CPUParticles2D" type="CPUParticles2D" parent="NewHighScoreBox"]
material = SubResource("CanvasItemMaterial_ipb26")
position = Vector2(291, 22)
emitting = false
amount = 40
texture = ExtResource("4_d2ee5")
one_shot = true
explosiveness = 1.0
randomness = 0.58
lifetime_randomness = 0.24
direction = Vector2(1, -1)
spread = 20.1
gravity = Vector2(0, 200)
initial_velocity_min = 68.29
initial_velocity_max = 203.89
angle_max = 720.0
color = Color(1, 1, 0, 1)
color_ramp = SubResource("Gradient_d2ee5")
anim_speed_max = 2.17

[node name="CPUParticles2D2" type="CPUParticles2D" parent="NewHighScoreBox"]
material = SubResource("CanvasItemMaterial_ipb26")
position = Vector2(7, 18)
emitting = false
amount = 40
texture = ExtResource("4_d2ee5")
one_shot = true
explosiveness = 1.0
randomness = 0.58
lifetime_randomness = 0.24
direction = Vector2(-1, -1)
spread = 20.1
gravity = Vector2(0, 200)
initial_velocity_min = 68.29
initial_velocity_max = 203.89
angle_max = 720.0
color = Color(1, 1, 0, 1)
color_ramp = SubResource("Gradient_d2ee5")
anim_speed_max = 2.17

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -11.0
offset_right = 158.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "CLOSING TIME"
scroll_active = false
horizontal_alignment = 1
